# once-tube-TUI

./: .gitignore  README.md  once_tube.py  once_tube.tcss  pyproject.toml  requirements.txt
