[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build-meta"

[project]
name = "once-tube"
version = "0.1.0"
description = "A high-performance TUI for searching and playing YouTube videos (especially TWICE) using yt-dlp and Textual."
authors = [{name = "Rel"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=7.1.0",
    "yt-dlp>=2025.12.8",
]

[project.scripts]
once-tube = "once_tube:main"

[tool.setuptools]
py-modules = ["once_tube"]